@@ -6,3 +6,5 @@ v 1.1:
 	- Added more helpful output to errors on argument lengths.
 	- GroupManager will now attempt to select the default world when using commands instead of failing and telling you to use '/manselect <world>'.
 	- Invalid groups assigned to players in users.yml will no longer cause a crash. GM will now set them to the default group instead.
+	- Fix for Users.yml containing only 'users:' causing a crash.
+	- GroupManager will now generate a fresh Users and Groups yml if either file is empty.
